# gsdesk

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: FIRST_RELEASE_SCOPE.md  LOGS_AND_DIAGNOSTICS.md  PRIVACY.md  RELEASE_CHECKLIST.md
scripts/: e2e-3rounds.mjs  prepare-runtime-assets.mjs  smoke-core.mjs  smoke-desktop.mjs  verify-antd6.mjs  verify-bundle-config.mjs  verify-release-assets.mjs  verify-security.mjs
skills/release/: SKILL.md
skills/rust-tauri/: SKILL.md
skills/typescript-react/: SKILL.md
src/: App.tsx  api.ts  appController.ts  logModel.ts  main.tsx  serviceIds.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/runtime-assets/: .gitignore  README.md
src-tauri/src/: core_config.rs  core_logs.rs  data_cleanup.rs  diagnostics.rs  failure_rules.rs  lib.rs  main.rs  models.rs  network.rs  paths.rs  ports.rs  preflight.rs  process.rs  runtime_backup.rs  service.rs  service_logs.rs  settings.rs  toolchain.rs  tray.rs  update.rs
src-tauri/windows/: nsis-hooks.nsh
src/dev/: previewApi.ts
src/pages/: DiagnosticsPage.tsx  EnvironmentPage.tsx  LogsPage.tsx  NetworkPage.tsx  OverviewPage.tsx  SettingsPage.tsx  ShellUpdatePage.tsx  WebconsolePage.tsx  diagnosticsRules.ts  environmentLogic.ts  environmentTables.tsx  (+1 more)
tests/: ui-smoke.spec.ts
(+12 files in other folders)
