[package]
name = "gsdesk"
version = "0.1.0"
description = "GSDesk desktop runtime manager for gsuid_core"
authors = ["yeahhhh321"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "gsdesk_lib"
path = "src/lib.rs"

[[bin]]
name = "gsdesk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2"
wait-timeout = "0.2"
zip = "0.6"
